[IMP]pms: Improvement Views

--- a/pms/views/pms_checkin_partner_views.xml
+++ b/pms/views/pms_checkin_partner_views.xml
@@ -458,6 +458,7 @@
                         enable_counters="1"
                         select="multi"
                     />
+                    <field name="pms_property_id" enable_counters="1" select="multi" />
                 </searchpanel>
             </search>
         </field>
