--- a/pms/views/folio_portal_templates.xml
+++ b/pms/views/folio_portal_templates.xml
@@ -182,7 +182,7 @@
                         t-if="folio.partner_invoice_ids and folio.partner_invoice_ids[0] != folio.partner_id"
                     >
                             <div
-                            t-field="folio.partner_invoice_ids"
+                            t-esc="folio.partner_invoice_ids[0]"
                             t-options='{"widget": "contact", "fields": ["address", "name", "phone"], "no_marker": True, "phone_icons": True}'
                         />
                         </t>
