--- a/pms/views/assets.xml
+++ b/pms/views/assets.xml
@@ -1,9 +1,12 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8" ?>
 <odoo>
 
-<template id="assets_frontend">
+<template id="assets_frontend" inherit_id="portal.assets_frontend">
     <xpath expr="//script[last()]" position="after">
-        <script type="text/javascript" src="/pms/static/src/js/send_invitation_data.js"></script>
+        <script
+                type="text/javascript"
+                src="/pms/static/src/js/send_invitation_data.js"
+            />
     </xpath>
 </template>
 
