--- a/pms/views/pms_reservation_views.xml
+++ b/pms/views/pms_reservation_views.xml
@@ -360,7 +360,7 @@
                             string="General Info"
                             name="contact_details"
                         >
-                            <field name="partner_id" />
+                            <field name="partner_id" invisible="1" />
                             <field
                                 name="document_type"
                                 attrs="{'invisible':[('reservation_type','in',('out'))]}"
